miniextendr-macros/tests/ui/derive_dataframe_field_width_on_scalar.rs
//! Test: width on a scalar type is rejected.

use miniextendr_macros::DataFrameRow;

#[derive(DataFrameRow)]
struct Foo {
    #[dataframe(width = 3)]
    value: f64,
}

fn main() {}
